# maven_github_scraper

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  analyzer_error_log  analyzer_output.json  cargo-packages  nice.json  report.json  shell.nix
.run/: Run rp.run.xml
fetch_more_data/: Cargo.toml
fetch_more_data/src/: api.rs  fetcher.rs  main.rs
java-repos/: .dockerignore  .gitattributes  .gitignore  Cargo.toml  Dockerfile  README.md  ci-update.sh
java-repos/.github/workflows/: updater.yml
java-repos/src/: config.rs  data.rs  main.rs  utils.rs
java-repos/src/github/: api.rs  mod.rs
pom-aggregator/: Cargo.toml  errors
pom-aggregator/src/: main.rs  pom.rs
rp/: Cargo.toml
rp/src/: data.rs  main.rs
rp/src/scraper/: github.rs  mod.rs
src/: data.rs  main.rs
src/analyzer/: mod.rs
src/scraper/: github.rs  mod.rs
