[package]
name = "fetch_more_data"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11.12", features = ["json", "rustls-tls"], default-features = false }
serde = "1"
serde_derive = "1"
serde_json = "1"
csv = "1.0.5"
tokio = { version = "1.34.0", features = ["full", "tracing"] }
thiserror = { version = "1", features = [] }
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
console-subscriber = "0.2"

