[package]
name = "rp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde-xml-rs = "0.6"
rayon = "1.8"
dashmap = { version = "5", features = ["rayon", "serde", "inline"] }
clap = { version = "4", features = ["derive"] }
color-eyre = "0.6"
thiserror = "1"
walkdir = "2"
rand = "0.8"
rand_chacha = "0.3"
csv = "1.3"
reqwest = { version = "0.11", default-features = false, features = ["rustls", "json"] }
tokio = { version = "1.35", features = ["full"] }
tracing = "0.1.40"
serde_json = "1.0.108"
